--- a/TCPClientApp/TCPClientApp.csproj
+++ b/TCPClientApp/TCPClientApp.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="Extended.Wpf.Toolkit" Version="4.5.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <PackageReference Include="Setup" Version="1.0.0" />
     <PackageReference Include="SuperSimpleTcp" Version="3.0.10" />
     <PackageReference Include="System.Management" Version="7.0.0" />
   </ItemGroup>
