--- a/TCP Server/TCP Server.csproj
+++ b/TCP Server/TCP Server.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <PackageReference Include="Setup" Version="1.0.0" />
     <PackageReference Include="SuperSimpleTcp" Version="3.0.10" />
   </ItemGroup>
 
